feat: Add temporary review
Add a temporary review TextView to fragment_detail.xml for phone layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Popular Movies Stage 2</string>
     <string name="sort_by_popularity">Sort By Popularity</string>
     <string name="sort_by_rating">Sort By Rating</string>
+    <string name="reviews">Reviews</string>
 
 </resources>
