feat: Add menu ShareActionProvider to DetailFragment
Add menu layout, detail, with a ShareActionProvider.  in DetailFragment add setHasOptionsMenu(true), write the addShareMovieToOptionsMenu method and override onCreateOptionsMenu.  In ApiUtility write getPosterUrlFromTrailerId method.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="sort_by_rating">Sort By Rating</string>
     <string name="reviews">Reviews</string>
     <string name="show_favorites">Show favorites</string>
+    <string name="share_first_trailer">Share First Trailer</string>
 
 </resources>
